crates/uitest/fixtures/ty_check/payable_unknown_attr_on_recv_block.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/payable_unknown_attr_on_recv_block.fe
---
error[12-0004]: unsupported `#[payble]` attribute on recv block
  ┌─ payable_unknown_attr_on_recv_block.fe:7:5
  │
7 │     #[payble]
  │     ^^^^^^^^^ expected no attributes
